--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Navigation Section -->
 
   <nav>
-    <img src="https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_burger-logo.svg" />
+    <img src="images/htmlcss1-img_burger-logo.jpg" />
     <span><a href="#">MENU</a></span>
     <span><a href="#">NUTRITION</a></span>
     <span><a href="#">ORDER</a></span>
